--- a/less/header.less
+++ b/less/header.less
@@ -56,9 +56,12 @@
     width: 100%;
     font-size: @font-size-large;
     margin: 0;
+    float: left;
 
     .navbar-nav {
       .container;
+
+      float: none;
 
       > .leaf {
         > a,
